--- a/eda.ipynb
+++ b/eda.ipynb
@@ -5,15 +5,7 @@
    "execution_count": 1,
    "id": "a106233b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Packages\n",
     "import pandas as pd\n",
@@ -405,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "4c883c50",
    "metadata": {},
    "outputs": [
@@ -417,7 +409,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "d99d2841",
    "metadata": {},
    "outputs": [
@@ -483,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "319bf106",
    "metadata": {},
    "outputs": [
@@ -493,7 +485,7 @@
        "['SeniorCitizen']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "41a4eb29",
    "metadata": {},
    "outputs": [
@@ -550,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "d1f89ac2",
    "metadata": {},
    "outputs": [
@@ -577,7 +569,7 @@
        " 'Churn']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "4a6a9035",
    "metadata": {},
    "outputs": [
@@ -627,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "44a05cce",
    "metadata": {},
    "outputs": [
@@ -649,7 +641,7 @@
        "Name: count, Length: 6531, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "da98a494",
    "metadata": {},
    "outputs": [],
@@ -672,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "3e223224",
    "metadata": {},
    "outputs": [
@@ -707,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "d8e07f26",
    "metadata": {},
    "outputs": [
@@ -906,12 +898,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "b2f9aeec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bw/7dtpsq7x18v247pfdbtwt3z80000gn/T/ipykernel_73394/1714302680.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df['Churn'].replace({'No': 0, 'Yes': 1}, inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exporting cleaned data\n",
+    "df['Churn'].replace({'No': 0, 'Yes': 1}, inplace=True)\n",
     "df.to_csv(\"data/cleaned_data.csv\", index=False)"
    ]
   },
