Track data files with DVC and add project documentation

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -931,8 +931,8 @@
    "metadata": {},
    "source": [
     "1. Missing value imputation for TotalCharges column\n",
-    "2. Encoding categorical variables (One-Hot Encoding or Label Encoding)\n",
-    "3. Feature scaling for continuous variables (StandardScaler or MinMaxScaler)"
+    "2. Encoding categorical variables (Label encoding)\n",
+    "3. Feature scaling for continuous variables (RobustScaler)"
    ]
   }
  ],
