feature selection methods will be added to train.py

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -930,9 +930,10 @@
    "id": "cd10d800",
    "metadata": {},
    "source": [
-    "1. Missing value imputation for TotalCharges column\n",
-    "2. Encoding categorical variables (Label encoding)\n",
-    "3. Feature scaling for continuous variables (RobustScaler)"
+    "1. Delete customerID column\n",
+    "2. Missing value imputation for TotalCharges column\n",
+    "3. Encoding categorical variables (Label encoding)\n",
+    "4. Feature scaling for continuous variables (RobustScaler)"
    ]
   }
  ],
